ibm-ctg/3.0/modules/ROOT/pages/ibm-ctg-connector-reference.adoc
= IBM CTG Connector 3.0 Reference 
:page-aliases: connectors::ibm/ibm-ctg-connector-reference.adoc


Anypoint Connector for IBM CICS Transaction Gateway (IBM CTG Connector) provides integration with back-end CICS apps using the CICS Transaction Gateway.

Release Notes: xref:release-notes::connector/ibm-ctg-connector-release-notes-mule-4.adoc[IBM CICS Transaction Gateway Connector Release Notes]


== Configurations
---
[[config]]
=== Config


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<config_connection, Connection>>
 | The connection types to provide to this configuration. | | x
| Name a| String |  The identifier of this element used to reference it in other components. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when it sees fit. |  |
|===

==== Connection Types
[[config_connection]]
===== Connection


====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Host a| String |  |  localhost |
| Port a| String |  |  2006 |
| Servers name a| String |  |  | x
| Username a| String |  |  | x
| Password a| String |  |  | x
| Keystore location a| String |  The location of the keystore containing the certificates required for an SSL connection. |  |
| Keystore Password a| String |  The password required to access the keystore for an SSL connection. |  |
| Connection Timeout a| Number |  Sets the socket connection timeout value for a connection to CICS TG. This timeout represents the maximum amount of time in milliseconds that a managed connection attempts to open a socket connection successfully to a remote Gateway daemon. The timeout is ignored for attempted connections to a local Gateway instance. A value of 0 represents no timeout. |  0 |
| Response Timeout a| Number |  Set the response timeout value for a connection to CICS TG. This timeout represents the maximum amount of time in milliseconds that a managed connection attempts to wait for a response to a request. A value of 0 represents no timeout. |  30000 |
| CTG Trace a| Boolean |  Turns all levels of CTG tracing on or off. |  false |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool. |  |
|===

== Supported Operations

* <<createChannelAndContentInstance>>
* <<execute>>
* <<executeUsingCommarea>>
* <<executeWithMultipleChannels>>

== Operations

[[createChannelAndContentInstance]]
=== Create Channel And Content Instance
`<ibmctg:create-channel-and-content-instance>`

Create an instance of ChannelAndContent to use in the input list of the *Execute with Multiple channels* operation.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Content a| Binary |  The input data to be passed to the CICS program. |  | x
| Request a| <<ChannelRequest>> |  A ChannelRequest that contains the details for request to CTG, such as: program name, TPN, encoding, channel name and its containers (request, response and error). |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |<<ChannelAndContent>>
|===

==== Throws

* IBMCTG:AEI0
* IBMCTG:CONNECTION_ERROR
* IBMCTG:CONNECTIVITY
* IBMCTG:ECI_ERR_INVALID_CALL_TYPE
* IBMCTG:ECI_ERR_NO_CICS
* IBMCTG:ECI_ERR_SECURITY_ERROR
* IBMCTG:ECOM
* IBMCTG:ERR_GATEWAY
* IBMCTG:IBMCCExecution
* IBMCTG:REQUEST_ERROR
* IBMCTG:RESOURCE
* IBMCTG:SERVER_ERROR
* IBMCTG:TRANSACTION
* IBMCTG:UNKNOWN

[[execute]]
=== Execute

`<ibmctg:execute>`

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Content a| Any |  |  #[payload] |
| Channel Request a| <<ChannelRequest>> |  |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Binary
|===

==== For Configurations

* <<config>>

==== Throws

* IBMCTG:AEI0
* IBMCTG:CONNECTION_ERROR
* IBMCTG:CONNECTIVITY
* IBMCTG:ECI_ERR_INVALID_CALL_TYPE
* IBMCTG:ECI_ERR_NO_CICS
* IBMCTG:ECI_ERR_SECURITY_ERROR
* IBMCTG:ECOM
* IBMCTG:ERR_GATEWAY
* IBMCTG:IBMCCExecution
* IBMCTG:REQUEST_ERROR
* IBMCTG:RESOURCE
* IBMCTG:RETRY_EXHAUSTED
* IBMCTG:SERVER_ERROR
* IBMCTG:TRANSACTION
* IBMCTG:UNKNOWN

[[executeUsingCommarea]]
=== Execute Using Commarea

`<ibmctg:execute-using-commarea>`

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Content a| Any |  |  #[payload] |
| Commarea Request Type a| <<CommareaRequest>> |  |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

==== For Configurations

* <<config>>

==== Throws

* IBMCTG:AEI0
* IBMCTG:CONNECTION_ERROR
* IBMCTG:CONNECTIVITY
* IBMCTG:ECI_ERR_INVALID_CALL_TYPE
* IBMCTG:ECI_ERR_NO_CICS
* IBMCTG:ECI_ERR_SECURITY_ERROR
* IBMCTG:ECOM
* IBMCTG:ERR_GATEWAY
* IBMCTG:IBMCCExecution
* IBMCTG:REQUEST_ERROR
* IBMCTG:RESOURCE
* IBMCTG:RETRY_EXHAUSTED
* IBMCTG:SERVER_ERROR
* IBMCTG:TRANSACTION
* IBMCTG:UNKNOWN


[[executeWithMultipleChannels]]
=== Execute With Multiple Channels
`<ibmctg:execute-with-multiple-channels>`


Calls a remote CICS program sending data encapsulated in channels and containers, allowing users to transfer more than 32 KB in a single request.

A container is a named reference to a storage area managed by CICS that can hold any form of application data. A container can hold data in any format that the application requires and is limited only by the amount of storage available. An application can reference any number of containers.

A channel is a uniquely named reference to a collection of containers. It is analogous to a COMMAREA, but it is not subject to its constraints. Programs can pass a single channel between them. You can think of a channel as a parameter list. The same channel can be passed from one program to another.

Channels and containers are visible only to the program that creates them, and to the programs that they are passed to. When these programs end, CICS automatically deletes the containers and their storage. They are not recoverable. If you require to use recoverable containers, use CICS BTS containers.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Channel And Contents a| Array of <<ChannelAndContent>> |  A java.util.List of ChannelAndContent containing one or more pairs with channel and the details for request to CTG, such as: program name, TPN, encoding, channel name, and its containers (request, response and error); with this respective content. |  #[payload] |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Array of Binary
|===

==== For Configurations

* <<config>>

==== Throws

* IBMCTG:AEI0
* IBMCTG:CONNECTION_ERROR
* IBMCTG:CONNECTIVITY
* IBMCTG:ECI_ERR_INVALID_CALL_TYPE
* IBMCTG:ECI_ERR_NO_CICS
* IBMCTG:ECI_ERR_SECURITY_ERROR
* IBMCTG:ECOM
* IBMCTG:ERR_GATEWAY
* IBMCTG:IBMCCExecution
* IBMCTG:REQUEST_ERROR
* IBMCTG:RESOURCE
* IBMCTG:RETRY_EXHAUSTED
* IBMCTG:SERVER_ERROR
* IBMCTG:TRANSACTION
* IBMCTG:UNKNOWN

== Types
[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| Blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[PoolingProfile]]
=== Pooling Profile

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Active a| Number | Controls the maximum number of Mule components that can be borrowed from a session at one time. When set to a negative value, there is no limit to the number of components that may be active at one time. When maxActive is exceeded, the pool is said to be exhausted. |  |
| Max Idle a| Number | Controls the maximum number of Mule components that can sit idle in the pool at any time. When set to a negative value, there is no limit to the number of Mule components that may be idle at one time. |  |
| Max Wait a| Number | Specifies the number of milliseconds to wait for a pooled component to become available when the pool is exhausted and the exhaustedAction is set to WHEN_EXHAUSTED_WAIT. |  |
| Min Eviction Millis a| Number | Determines the minimum amount of time an object may sit idle in the pool before it is eligible for eviction. When non-positive, no objects will be evicted from the pool due to idle time alone. |  |
| Eviction Check Interval Millis a| Number | Specifies the number of milliseconds between runs of the object evictor. When non-positive, no object evictor is executed. |  |
| Exhausted Action a| Enumeration, one of:

** WHEN_EXHAUSTED_GROW
** WHEN_EXHAUSTED_WAIT
** WHEN_EXHAUSTED_FAIL | Specifies the behavior of the Mule component pool when the pool is exhausted. Possible values are: "WHEN_EXHAUSTED_FAIL", which will throw a NoSuchElementException, "WHEN_EXHAUSTED_WAIT", which will block by invoking Object.wait(long) until a new or idle object is available, or WHEN_EXHAUSTED_GROW, which will create a new Mule instance and return it, essentially making maxActive meaningless. If a positive maxWait value is supplied, it will block for at most that many milliseconds, after which a NoSuchElementException will be thrown. If maxThreadWait is a negative value, it will block indefinitely. |  |
| Initialisation Policy a| Enumeration, one of:

** INITIALISE_NONE
** INITIALISE_ONE
** INITIALISE_ALL | Determines how components in a pool should be initialized. The possible values are: INITIALISE_NONE (will not load any components into the pool on startup), INITIALISE_ONE (will load one initial component into the pool on startup), or INITIALISE_ALL (will load all components in the pool on startup) |  |
| Disabled a| Boolean | Whether pooling should be disabled |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[ChannelRequest]]
=== Channel Request

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Channel a| String | The name of the channel. Value is case-sensitive. |  | x
| Request Container a| String | The name of the container used to send the request data to the CICS program. Value is case-sensitive. |  | x
| Response Container a| String | The name of the container used to return the data obtained from the CICS program. Value is case-sensitive. |  | x
| Error Container a| String | The name of the container used to return error information if something goes wrong in the CICS program. Value is case-sensitive. |  | x
| Program Name a| String | The name of the CICS program to call. It is case-sensitive. |  | x
| Tpn Name a| String | The transaction identifier of the CICS mirror transaction. Optional. |  |
| Encoding a| String | The data encoding. Default value is IBM037. | IBM037 |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[ErrorMapping]]
=== Error Mapping

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | Source of the error. |  |
| Target a| String | Target of the error. |  | x
|===

[[CommareaRequest]]
=== Commarea Request

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Commarea Length a| Number | The length of COMMAREA. Default value is -1. This should be set to less than or equal to the length of the byte array passed in the payload. The maximum advised size is
 32500 bytes, as this is guaranteed to be flowed successfully across all protocols. COMMAREA sizes greater than this may generate an ECI_ERR_INVALID_DATA_LENGTH return code. | -1 |
| Reply Length a| Number | The length of the data stream to be returned back from the Gateway daemon to the Mule (JCA) application. Default value is -1. Setting this property can reduce the data
 transmitted over the network if the data returned by CICS is less than the full COMMAREA size, and you know the size of the data in advance. | -1 |
| Program Name a| String | The name of the CICS program to call. It is case-sensitive. |  | x
| Tpn Name a| String | The transaction identifier of the CICS mirror transaction. Optional. |  |
| Encoding a| String | The data encoding. Default value is IBM037. | IBM037 |
|===

[[ChannelAndContent]]
=== Channel And Content

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Channel Request a| <<ChannelRequest>> |  |  |
| Content a| Binary |  |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
